--- a/carta.html
+++ b/carta.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-              <li><a href="Index.html">Inicio</a></li>
+              <li><a href="index.html">Inicio</a></li>
               <li><a href="carta.html">carta</a></li>
               <li><a href="contacto.html">Contacto</a></li>
               <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
